# LoaningManagementPlugin

./: .gitignore  2  LICENSE  MANIFEST.in  README.md  api.py  apps.py  forms.py  loanmanagement.py  models.py  pyproject.toml  reinstall  serializers.py  urls.py  views.py
migrations/: 0001_initial.py  0002_alter_loansession_id.py  0003_auto_20231004_1954.py  0004_loansession_loan_user.py  0005_alter_loansession_loan_date.py  0006_alter_loanuser_id.py  0007_auto_20231113_1936.py  0008_auto_20231115_2245.py  0009_alter_loanuser_idn.py  0010_auto_20231116_1846.py  0011_auto_20231121_1532.py  0012_auto_20240206_1508.py
src/inventree_loan/: LoanPlugin.py  __init__.py  admin.py  api.py  models.py  serializers.py  urls.py  views.py
src/inventree_loan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/inventree_loan/migrations/: 0001_initial.py  0002_alter_loansession_loan_user_delete_loanuser.py  0003_loansession_loaner.py  0004_loansession_last_notice_loansession_notices_sent.py
src/inventree_loan/templates/: loan_tracking_sidebar.html  loaning_stats_panel.html  part_loan_panel.html  tracking.html
src/inventree_loan/templates/js/: loan.js
static/: test.js
templates/: add.html  loan_base.html  loan_tracking_sidebar.html  loansessionform_temp.html  sidebar.html  tracking.html
templates/js/: loan.js  test.js  track.js
templates/templates/: add.html  loaning_stats_panel.html  loansessionform_temp.html  test.html  test.js
